@@ -3,12 +3,12 @@
 
 [realms]
 	__REALM__ = {
-		profile = /krb5/krb5.conf
-		database_name = /krb5/kdb5
-		admin_keytab = /krb5/ovsec_adm.srvtab
-		key_stash_file = /krb5/.k5.__REALM__
-		acl_file = /krb5/ovsec_adm.acl
-		dict_file = /krb5/ovsec_adm.dict
+		profile = __K5ROOT__/krb5.conf
+		database_name = __K5ROOT__/kdb5
+		admin_keytab = __K5ROOT__/ovsec_adm.srvtab
+		key_stash_file = __K5ROOT__/.k5.__REALM__
+		acl_file = __K5ROOT__/ovsec_adm.acl
+		dict_file = __K5ROOT__/ovsec_adm.dict
 		kadmind_port = 1751
 		master_key_type = des-cbc-crc
 		supported_enctypes = des-cbc-crc:normal des-cbc-crc:v4
